# ViT

./: README.md  index.ipynb  pyproject.toml
configs/: default.json
notebooks/: inference.ipynb  overfit.ipynb
scripts/: train_cifar.py  train_cifar.sh  train_mnist.py  train_mnist.sh
vision_transformer/: __init__.py  trainer.py  vit.py
